@@ -1,17 +1,14 @@
-requires "Carp" => "0";
 requires "Hash::Util" => "0";
+requires "MRO::Compat" => "0";
 requires "Scalar::Util" => "0";
-requires "Storable" => "0";
-requires "parent" => "0";
 requires "perl" => "5.008009";
-requires "strict" => "0";
-requires "warnings" => "0";
 
 on 'test' => sub {
   requires "ExtUtils::MakeMaker" => "0";
   requires "File::Spec" => "0";
   requires "IO::Handle" => "0";
   requires "IPC::Open3" => "0";
+  requires "Number::Tolerant" => "0";
   requires "Test2::V0" => "0";
   requires "Test::More" => "0";
 };
@@ -27,7 +24,6 @@ on 'configure' => sub {
 on 'develop' => sub {
   requires "Dist::Zilla" => "5";
   requires "Dist::Zilla::Plugin::AutoMetaResources" => "0";
-  requires "Dist::Zilla::Plugin::AutoPrereqs" => "0";
   requires "Dist::Zilla::Plugin::BumpVersionAfterRelease" => "0";
   requires "Dist::Zilla::Plugin::CPANFile" => "0";
   requires "Dist::Zilla::Plugin::CheckMetaResources" => "0";
@@ -69,13 +65,11 @@ on 'develop' => sub {
   requires "Dist::Zilla::PluginBundle::Filter" => "0";
   requires "Pod::Coverage::TrustPod" => "0";
   requires "Pod::Weaver::Section::BugsAndLimitations" => "0";
-  requires "Pod::Wordlist" => "0";
   requires "Software::License::GPL_3" => "0";
   requires "Test::CPAN::Changes" => "0.19";
   requires "Test::CPAN::Meta::JSON" => "0.16";
   requires "Test::CleanNamespaces" => "0.15";
-  requires "Test::Fixme" => "0";
-  requires "Test::More" => "0.96";
+  requires "Test::More" => "0.88";
   requires "Test::NoBreakpoints" => "0.15";
   requires "Test::NoTabs" => "0";
   requires "Test::Perl::Critic" => "0";
@@ -83,6 +77,5 @@ on 'develop' => sub {
   requires "Test::Pod::Coverage" => "1.08";
   requires "Test::Spelling" => "0.12";
   requires "Test::TrailingSpace" => "0.0203";
-  requires "Test::Vars" => "0";
   requires "Test::Version" => "1";
 };
