@@ -76,7 +76,14 @@ filenames = Makefile.PL
 
 
 [Test::ReportPrereqs]
+
 [Test::Compile]
+; these require at least Perl 5.16
+; don't know how to make the compile test conditional
+; upon Perl version
+skip = Hash::Wrap::Base::LValue
+skip = Hash::Wrap::Class::LValue
+
 [Test::NoTabs]
 [Test::Fixme]
 [Test::Version]
@@ -88,6 +95,8 @@ filenames = Makefile.PL
 [Test::CPAN::Meta::JSON]
 [Test::Perl::Critic]
 [Test::CleanNamespaces]
+skip = Hash::Wrap$
+
 [Test::PodSpelling]
 stopword = mistyped
 stopword = DCONWAY
@@ -100,19 +109,19 @@ stopword = instantiation
 [Prereqs::AuthorDeps]
 [EnsurePrereqsInstalled]
 
-
 [EnsureChangesHasContent]
 
 ; --- Project-specific directives
 
-[AutoPrereqs]
-
 [Prereqs]
-Hash::Util = 0
+Hash::Util   = 0
 Scalar::Util = 0
+MRO::Compat  = 0
+perl = 5.008009
 
 [Prereqs / TestRequires]
-Test2::V0 = 0
+Test2::V0        = 0
+Number::Tolerant = 0
 
 [Prereqs / DevelopRequires ]
 Pod::Coverage::TrustPod  = 0
