@@ -1,0 +1,11 @@
+package Hash::Wrap::Class;
+
+use parent 'Hash::Wrap::Base';
+
+use strict;
+use warnings;
+
+our $VERSION = '0.02';
+
+1;
+
