@@ -1,0 +1,16 @@
+package Hash::Wrap::Class::LValue;
+
+use strict;
+use warnings;
+
+use 5.01600;
+
+our $VERSION = '0.02';
+
+use parent 'Hash::Wrap::Base::LValue';
+
+1;
+
+
+
+
