@@ -22,8 +22,8 @@ command = sub
 
 [Region  / postlude]
 
-[BugsAndLimitations]
-
+[Bugs]
+[SourceGitHub]
 [Authors]
 [Contributors]
 [Legal]
